--- a/angular.json
+++ b/angular.json
@@ -2,6 +2,12 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
+  "schematics": {
+    "@schematics/angular:component": {
+      "inlineStyle": true,
+      "inlineTemplate": true
+    }
+  },
   "projects": {
     "angular-google-books-ui": {
       "projectType": "application",
