--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run angular-google-books-ui:serve-ssr",
+    "serve:ssr": "node dist/angular-google-books-ui/server/main.js",
+    "build:ssr": "ng build && ng run angular-google-books-ui:server",
+    "prerender": "ng run angular-google-books-ui:prerender"
   },
   "private": true,
   "dependencies": {
@@ -17,12 +21,15 @@
     "@angular/forms": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/platform-server": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@fortawesome/angular-fontawesome": "0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@nguniversal/express-engine": "^16.0.2",
     "@rx-angular/state": "^15.0.0",
     "@rx-angular/template": "^15.2.0",
+    "express": "^4.15.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zod": "^3.21.4",
@@ -32,7 +39,10 @@
     "@angular-devkit/build-angular": "^16.0.3",
     "@angular/cli": "~16.0.3",
     "@angular/compiler-cli": "^16.0.0",
+    "@nguniversal/builders": "^16.0.2",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^14.15.0",
     "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
